@@ -1,5 +1,5 @@
 Package: minfi
-Version: 1.13.1
+Version: 1.13.2
 Title: Analyze Illumina's 450k methylation arrays
 Description: Tools for analyzing and visualizing Illumina's 450k array data
 Authors@R: c(person(c("Kasper", "Daniel"), "Hansen", role = c("cre", "aut"),
@@ -26,6 +26,7 @@ Suggests: IlluminaHumanMethylation450kmanifest (>= 0.2.0),
 	  RUnit,
 	  digest
 Imports:  S4Vectors,
+	  GenomeInfoDb,
 	  IRanges,
 	  beanplot, 
 	  RColorBrewer, 
